--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
             <artifactId>geronimo-servlet_3.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+ 			<groupId>org.pacesys</groupId>
+  			<artifactId>openstack4j</artifactId>
+  			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.directory.studio</groupId>
+    		<artifactId>org.apache.commons.io</artifactId>
+    		<version>2.4</version>
+		</dependency>
     </dependencies>
 
     <build>
