--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
 - path: target/UploadFlowJsJava.war
   memory: 512M
   instances: 1
-  domain: mybluemix.net
-  name: upload-flowjs-java
-  host: upload-flowjs-java
+  domain: eu-gb.mybluemix.net
+  name: poc-flowjs-java
+  host: poc-flowjs-java
   disk_quota: 1024M
